; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/ai03/orbit/extr_orbit.c_matrix_init_kb.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/ai03/orbit/extr_orbit.c_matrix_init_kb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@isLeftHand = common dso_local global i64 0, align 8
@C6 = common dso_local global i32 0, align 4
@B6 = common dso_local global i32 0, align 4
@B5 = common dso_local global i32 0, align 4
@F6 = common dso_local global i32 0, align 4
@F7 = common dso_local global i32 0, align 4
@C7 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @matrix_init_kb() #0 {
  %1 = load i64, i64* @isLeftHand, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %10

3:                                                ; preds = %0
  %4 = load i32, i32* @C6, align 4
  %5 = call i32 @setPinOutput(i32 %4)
  %6 = load i32, i32* @B6, align 4
  %7 = call i32 @setPinOutput(i32 %6)
  %8 = load i32, i32* @B5, align 4
  %9 = call i32 @setPinOutput(i32 %8)
  br label %17

10:                                               ; preds = %0
  %11 = load i32, i32* @F6, align 4
  %12 = call i32 @setPinOutput(i32 %11)
  %13 = load i32, i32* @F7, align 4
  %14 = call i32 @setPinOutput(i32 %13)
  %15 = load i32, i32* @C7, align 4
  %16 = call i32 @setPinOutput(i32 %15)
  br label %17

17:                                               ; preds = %10, %3
  %18 = call i32 @set_layer_indicators(i32 0)
  %19 = call i32 (...) @matrix_init_user()
  ret void
}

declare dso_local i32 @setPinOutput(i32) #1

declare dso_local i32 @set_layer_indicators(i32) #1

declare dso_local i32 @matrix_init_user(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
